--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "esModuleInterop": true,
     "declaration": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["./src/**/*.ts"],
+  "exclude": ["./node_modules/", "./dist/", "./tests/"]
 }
