--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prepublish": "npm run build",
     "build": "tsc",
-    "test": "mocha -r ts-node/register './tests/**/*.ts'"
+    "test": "mocha -r ts-node/register './tests/**/*.test.ts'"
   },
   "repository": {
     "type": "git",
