--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "better-json-serializer",
   "version": "2.0.0",
   "description": "A tool that enables to use non-standard types in JSON (such as Sets, Maps, etc)",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index",
+  "types": "./dist/index",
+  "files": [
+    "./dist/",
+    "./src/"
+  ],
   "scripts": {
     "prepublish": "npm run build",
     "build": "tsc",
