--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "better-json-serializer",
   "version": "2.0.1",
   "description": "A tool that enables to use non-standard types in JSON (such as Sets, Maps, etc)",
+  "type": "module",
   "main": "./dist/index",
   "types": "./dist/index",
   "files": [
