--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-restricted-syntax": "off"
   }
 }
